Fixed whole page overflow

--- a/Elementum/src/index.css
+++ b/Elementum/src/index.css
@@ -22,5 +22,6 @@
 @layer base {
   body {
     font-family: var(--font-satoshi);
+    overflow-x: hidden;
   }
 }
